# mcp_proxy_maker

./: .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  README.md  README_HIVE.md  README_NOTION.md  pyproject.toml
.claude/skills/: probe-mcp.md  propose-filters.md
.claude/skills/hive-tasks/: SKILL.md
.claude/skills/notion/: SKILL.md
examples/: basic_proxy.yaml  multi_upstream.yaml  security_filter.yaml
mcp_proxy/: __init__.py  __main__.py  cli.py  server.py
mcp_proxy/config/: loader.py  schema.py
mcp_proxy/plugins/: adapter.py  base.py  filter_plugin.py  hive_access_plugin.py  inventory_plugin.py  logging_plugin.py  notion_access_plugin.py  rewrite_plugin.py
mcp_proxy/plugins/notion_access_plugin/: __init__.py  api.py  core.py  image_tools.py
tests/: test_hive_access_plugin.py  test_notion_access_plugin.py  test_plugins.py
